# ttrss-feed-translator

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  translator.env.example
docker/: entrypoint.sh
sql/: 001_translation_tracking.sql
src/ttrss_feed_translator/: __main__.py  app.py  config.py  db.py  fulltext.py  html_translate.py  models.py  tags.py  translator.py  utils.py  workflow.py
src/ttrss_feed_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_app.py  test_config.py  test_fulltext.py  test_html_translate.py  test_tags.py  test_translator.py  test_workflow.py
